bidding status
