# src/gen/java/us/filin/helpwanted/api/BuyerApiService.java
@@ -5,6 +5,7 @@ import us.filin.helpwanted.model.*;
 
 import org.glassfish.jersey.media.multipart.FormDataContentDisposition;
 
+import us.filin.helpwanted.model.BidJson;
 import us.filin.helpwanted.model.ProjectJson;
 
 import java.util.List;
@@ -17,8 +18,8 @@ import javax.ws.rs.core.SecurityContext;
 import javax.validation.constraints.*;
 
 public abstract class BuyerApiService {
-    public abstract Response bidBuyerProject(String username,String orderId,SecurityContext securityContext) throws NotFoundException;
-    public abstract Response bookmarkBuyerProject(String username,String orderId,SecurityContext securityContext) throws NotFoundException;
-    public abstract Response deleteOrder(String username,String orderId,SecurityContext securityContext) throws NotFoundException;
-    public abstract Response getBuyerProject(String username,String orderId,SecurityContext securityContext) throws NotFoundException;
+    public abstract Response bidBuyerProject(String username,String projectId,BidJson body,SecurityContext securityContext) throws NotFoundException;
+    public abstract Response bookmarkBuyerProject(String username,String projectId,SecurityContext securityContext) throws NotFoundException;
+    public abstract Response deleteOrder(String username,String projectId,SecurityContext securityContext) throws NotFoundException;
+    public abstract Response getBuyerProject(String username,String projectId,SecurityContext securityContext) throws NotFoundException;
 }
