# src/gen/java/us/filin/helpwanted/api/MarketApiService.java
@@ -18,5 +18,5 @@ import javax.validation.constraints.*;
 
 public abstract class MarketApiService {
     public abstract Response findProjectsByStatus( @NotNull List<String> status,SecurityContext securityContext) throws NotFoundException;
-    public abstract Response getProjectById(Long projectId,SecurityContext securityContext) throws NotFoundException;
+    public abstract Response getProjectById(String projectId,SecurityContext securityContext) throws NotFoundException;
 }
