# swagger (20).yaml
@@ -88,6 +88,7 @@ paths:
         description: 'A seller''s existing project '
         required: true
         type: string
+        format: guid
     put:
       tags:
         - seller
@@ -129,6 +130,7 @@ paths:
           description: A seller's existing project
           required: true
           type: string
+          format: guid
       responses:
         '400':
           description: Invalid ID supplied
@@ -186,8 +188,8 @@ paths:
           in: path
           description: ID of project to return
           required: true
-          type: integer
-          format: int64
+          type: string
+          format: guid
       responses:
         '200':
           description: successful operation
@@ -220,8 +222,8 @@ paths:
           in: path
           description: ID of pet to update
           required: true
-          type: integer
-          format: int64
+          type: string
+          format: guid
         - name: additionalMetadata
           in: formData
           description: Additional data to pass to server
@@ -262,8 +264,8 @@ paths:
           in: path
           description: ID of project containg image
           required: true
-          type: integer
-          format: int64
+          type: string
+          format: guid
         - name: imageId
           in: path
           description: image ID
@@ -288,18 +290,19 @@ paths:
         - petstore_auth:
             - 'write:projects'
             - 'bid:projects'
-  '/buyer/{username}/projects/{orderId}':
+  '/buyer/{username}/projects/{projectId}':
     parameters:
       - name: username
         in: path
         description: The buyer's username
         required: true
         type: string
-      - name: orderId
+      - name: projectId
         in: path
         description: an existing project ID
         required: true
         type: string
+        format: guid
     get:
       tags:
         - buyer
@@ -338,6 +341,13 @@ paths:
       operationId: bidBuyerProject
       produces:
         - application/json
+      parameters:
+        - in: body
+          name: body
+          description: Bid on project
+          required: true
+          schema:
+            $ref: '#/definitions/Bid'
       responses:
         '200':
           description: successful operation
@@ -377,7 +387,7 @@ definitions:
       id:
         type: string
         format: guid
-      project_id:
+      project:
         type: string
         format: guid
       bidder:
@@ -402,12 +412,6 @@ definitions:
         format: currency
     xml:
       name: Order
-  ParticipatedProject:
-    type: object
-    properties:
-      id:
-        type: integer
-        format: int64
   Project:
     type: object
     properties:
